tests/schemas/error/002_wrong_version.fcp
version: "4"

struct S1 {
    s1 @0: u8,
}
